umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_structure-list-notlist-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule_lenient
category: extended_molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 6, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 6, col 31"
extended_molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 8, col 31"
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C6
    atom_count: 9
    bond_count: 8
    extended_atoms: 3
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
